--- a/requirements.txt
+++ b/requirements.txt
@@ -2,55 +2,136 @@ aiohappyeyeballs==2.6.1
 aiohttp==3.13.2
 aiosignal==1.4.0
 annotated-types==0.7.0
+anthropic==0.72.0
 anyio==4.11.0
+appnope==0.1.4
+asttokens==3.0.0
+asyncio==4.0.0
 attrs==25.4.0
+cachetools==6.2.1
 certifi==2025.10.5
+cffi==2.0.0
 charset-normalizer==3.4.4
+chuk-ai-session-manager==0.7.1
+chuk-llm==0.12.7
+chuk-mcp==0.8.1
+chuk-mcp-client-oauth==0.3.5
+chuk-sessions==0.4.2
+chuk-term==0.1.3
+chuk-tool-processor==0.9.7
 click==8.3.0
+comm==0.2.3
+cryptography==46.0.3
+debugpy==1.8.17
+decorator==5.2.1
 distro==1.9.0
-fastuuid==0.14.0
+docstring_parser==0.17.0
+dotenv==0.9.9
+eval_type_backport==0.2.2
+executing==2.2.1
 filelock==3.20.0
 frozenlist==1.8.0
 fsspec==2025.10.0
+google-auth==2.43.0
+google-genai==1.49.0
+groq==0.33.0
 h11==0.16.0
 hf-xet==1.2.0
 httpcore==1.0.9
 httpx==0.28.1
-huggingface_hub==1.1.2
+httpx-sse==0.4.3
+huggingface-hub==0.36.0
+ibm-cos-sdk==2.14.3
+ibm-cos-sdk-core==2.14.3
+ibm-cos-sdk-s3transfer==2.14.3
+ibm_watsonx_ai==1.4.5
 idna==3.11
-importlib_metadata==8.7.0
+invoke==2.2.1
+ipykernel==7.1.0
+ipython==9.7.0
+ipython_pygments_lexers==1.1.1
+jaraco.classes==3.4.0
+jaraco.context==6.0.1
+jaraco.functools==4.3.0
+jedi==0.19.2
 Jinja2==3.1.6
 jiter==0.11.1
+jmespath==1.0.1
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
-litellm==1.79.1
+jupyter_client==8.6.3
+jupyter_core==5.9.1
+keyring==25.6.0
+lomond==0.3.3
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
+matplotlib-inline==0.2.1
+mcp==1.21.0
+mcp-cli==0.9.8
 mdurl==0.1.2
+mistralai==1.9.11
+more-itertools==10.8.0
 multidict==6.7.0
+nest-asyncio==1.6.0
+npm==0.1.1
+npx==0.1.6
+numpy==2.3.4
+ollama==0.6.0
 openai==2.7.1
+optional-django==0.1.0
 packaging==25.0
-pillow==12.0.0
+pandas==2.2.3
+parso==0.8.5
+pexpect==4.9.0
+platformdirs==4.5.0
+prompt_toolkit==3.0.52
 propcache==0.4.1
+psutil==7.1.3
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.23
 pydantic==2.12.4
+pydantic-settings==2.11.0
 pydantic_core==2.41.5
 Pygments==2.19.2
+PyJWT==2.10.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
+python-multipart==0.0.20
+pytz==2025.2
 PyYAML==6.0.3
+pyzmq==27.1.0
+redis==7.0.1
 referencing==0.37.0
 regex==2025.11.3
 requests==2.32.5
 rich==14.2.0
 rpds-py==0.28.0
+rsa==4.9.1
+safetensors==0.6.2
 shellingham==1.5.4
-smolagents==1.22.0
+six==1.17.0
 sniffio==1.3.1
+sse-starlette==3.0.3
+stack-data==0.6.3
+starlette==0.50.0
+tabulate==0.9.0
+tenacity==9.1.2
 tiktoken==0.12.0
 tokenizers==0.22.1
+tornado==6.5.2
 tqdm==4.67.1
-typer-slim==0.20.0
+traitlets==5.14.3
+transformers==4.57.1
+typer==0.20.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+tzdata==2025.2
 urllib3==2.5.0
+uuid==1.30
+uvicorn==0.38.0
+wcwidth==0.2.14
+websockets==15.0.1
 yarl==1.22.0
-zipp==3.23.0
