--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+aiofiles==24.1.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.13.2
 aiosignal==1.4.0
+annotated-doc==0.0.3
 annotated-types==0.7.0
 anthropic==0.72.0
 anyio==4.11.0
@@ -8,6 +10,8 @@ appnope==0.1.4
 asttokens==3.0.0
 asyncio==4.0.0
 attrs==25.4.0
+audioop-lts==0.2.2
+brotli==1.2.0
 cachetools==6.2.1
 certifi==2025.10.5
 cffi==2.0.0
@@ -29,11 +33,17 @@ docstring_parser==0.17.0
 dotenv==0.9.9
 eval_type_backport==0.2.2
 executing==2.2.1
+fastapi==0.121.1
+ffmpy==0.6.4
 filelock==3.20.0
 frozenlist==1.8.0
 fsspec==2025.10.0
 google-auth==2.43.0
 google-genai==1.49.0
+gradio==5.49.1
+gradio_client==1.13.3
+greenlet==3.2.4
+groovy==0.1.2
 groq==0.33.0
 h11==0.16.0
 hf-xet==1.2.0
@@ -66,7 +76,7 @@ lomond==0.3.3
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 matplotlib-inline==0.2.1
-mcp==1.21.0
+mcp==1.10.1
 mcp-cli==0.9.8
 mdurl==0.1.2
 mistralai==1.9.11
@@ -79,11 +89,14 @@ numpy==2.3.4
 ollama==0.6.0
 openai==2.7.1
 optional-django==0.1.0
+orjson==3.11.4
 packaging==25.0
 pandas==2.2.3
 parso==0.8.5
 pexpect==4.9.0
+pillow==11.3.0
 platformdirs==4.5.0
+playwright==1.55.0
 prompt_toolkit==3.0.52
 propcache==0.4.1
 psutil==7.1.3
@@ -92,9 +105,11 @@ pure_eval==0.2.3
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycparser==2.23
-pydantic==2.12.4
+pydantic==2.11.10
 pydantic-settings==2.11.0
-pydantic_core==2.41.5
+pydantic_core==2.33.2
+pydub==0.25.1
+pyee==13.0.0
 Pygments==2.19.2
 PyJWT==2.10.1
 python-dateutil==2.9.0.post0
@@ -110,17 +125,21 @@ requests==2.32.5
 rich==14.2.0
 rpds-py==0.28.0
 rsa==4.9.1
+ruff==0.14.4
+safehttpx==0.1.7
 safetensors==0.6.2
+semantic-version==2.10.0
 shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
 sse-starlette==3.0.3
 stack-data==0.6.3
-starlette==0.50.0
+starlette==0.49.3
 tabulate==0.9.0
 tenacity==9.1.2
 tiktoken==0.12.0
 tokenizers==0.22.1
+tomlkit==0.13.3
 tornado==6.5.2
 tqdm==4.67.1
 traitlets==5.14.3
