--- a/requirements.txt
+++ b/requirements.txt
@@ -67,6 +67,7 @@ jedi==0.19.2
 Jinja2==3.1.6
 jiter==0.11.1
 jmespath==1.0.1
+joblib==1.5.2
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
 jupyter_client==8.6.3
@@ -83,6 +84,7 @@ mistralai==1.9.11
 more-itertools==10.8.0
 multidict==6.7.0
 nest-asyncio==1.6.0
+nltk==3.9.2
 npm==0.1.1
 npx==0.1.6
 numpy==2.3.4
@@ -137,6 +139,7 @@ stack-data==0.6.3
 starlette==0.49.3
 tabulate==0.9.0
 tenacity==9.1.2
+textblob==0.19.0
 tiktoken==0.12.0
 tokenizers==0.22.1
 tomlkit==0.13.3
