--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+absl-py==2.3.1
 aiofiles==24.1.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.13.2
@@ -8,6 +9,7 @@ anthropic==0.72.0
 anyio==4.11.0
 appnope==0.1.4
 asttokens==3.0.0
+astunparse==1.6.3
 asyncio==4.0.0
 attrs==25.4.0
 audioop-lts==0.2.2
@@ -28,6 +30,7 @@ comm==0.2.3
 cryptography==46.0.3
 debugpy==1.8.17
 decorator==5.2.1
+diskcache==5.6.3
 distro==1.9.0
 docstring_parser==0.17.0
 dotenv==0.9.9
@@ -36,16 +39,21 @@ executing==2.2.1
 fastapi==0.121.1
 ffmpy==0.6.4
 filelock==3.20.0
+flatbuffers==25.9.23
 frozenlist==1.8.0
 fsspec==2025.10.0
+gast==0.6.0
 google-auth==2.43.0
 google-genai==1.49.0
+google-pasta==0.2.0
 gradio==5.49.1
 gradio_client==1.13.3
 greenlet==3.2.4
 groovy==0.1.2
 groq==0.33.0
+grpcio==1.76.0
 h11==0.16.0
+h5py==3.15.1
 hf-xet==1.2.0
 httpcore==1.0.9
 httpx==0.28.1
@@ -72,8 +80,12 @@ jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
 jupyter_client==8.6.3
 jupyter_core==5.9.1
+keras==3.12.0
 keyring==25.6.0
+libclang==18.1.1
+llama_cpp_python==0.3.16
 lomond==0.3.3
+Markdown==3.10
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 matplotlib-inline==0.2.1
@@ -81,16 +93,22 @@ mcp==1.10.1
 mcp-cli==0.9.8
 mdurl==0.1.2
 mistralai==1.9.11
+ml_dtypes==0.5.3
 more-itertools==10.8.0
+mpmath==1.3.0
 multidict==6.7.0
+namex==0.1.0
 nest-asyncio==1.6.0
+networkx==3.5
 nltk==3.9.2
 npm==0.1.1
 npx==0.1.6
 numpy==2.3.4
 ollama==0.6.0
 openai==2.7.1
+opt_einsum==3.4.0
 optional-django==0.1.0
+optree==0.17.0
 orjson==3.11.4
 packaging==25.0
 pandas==2.2.3
@@ -101,6 +119,7 @@ platformdirs==4.5.0
 playwright==1.55.0
 prompt_toolkit==3.0.52
 propcache==0.4.1
+protobuf==6.33.0
 psutil==7.1.3
 ptyprocess==0.7.0
 pure_eval==0.2.3
@@ -131,18 +150,25 @@ ruff==0.14.4
 safehttpx==0.1.7
 safetensors==0.6.2
 semantic-version==2.10.0
+setuptools==80.9.0
 shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
 sse-starlette==3.0.3
 stack-data==0.6.3
 starlette==0.49.3
+sympy==1.14.0
 tabulate==0.9.0
 tenacity==9.1.2
+tensorboard==2.20.0
+tensorboard-data-server==0.7.2
+tensorflow==2.20.0
+termcolor==3.2.0
 textblob==0.19.0
 tiktoken==0.12.0
 tokenizers==0.22.1
 tomlkit==0.13.3
+torch==2.9.0
 tornado==6.5.2
 tqdm==4.67.1
 traitlets==5.14.3
@@ -156,4 +182,7 @@ uuid==1.30
 uvicorn==0.38.0
 wcwidth==0.2.14
 websockets==15.0.1
+Werkzeug==3.1.3
+wheel==0.45.1
+wrapt==2.0.1
 yarl==1.22.0
