--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ astunparse==1.6.3
 asyncio==4.0.0
 attrs==25.4.0
 audioop-lts==0.2.2
+Authlib==1.6.5
 brotli==1.2.0
 cachetools==6.2.1
 certifi==2025.10.5
@@ -28,15 +29,21 @@ chuk-tool-processor==0.9.7
 click==8.3.0
 comm==0.2.3
 cryptography==46.0.3
+cyclopts==4.2.2
 debugpy==1.8.17
 decorator==5.2.1
 diskcache==5.6.3
 distro==1.9.0
+dnspython==2.8.0
 docstring_parser==0.17.0
+docutils==0.22.3
 dotenv==0.9.9
+email-validator==2.3.0
 eval_type_backport==0.2.2
+exceptiongroup==1.3.0
 executing==2.2.1
 fastapi==0.121.1
+fastmcp==2.11.2
 ffmpy==0.6.4
 filelock==3.20.0
 flatbuffers==25.9.23
@@ -68,6 +75,8 @@ invoke==2.2.1
 ipykernel==7.1.0
 ipython==9.7.0
 ipython_pygments_lexers==1.1.1
+ipywidgets==8.1.8
+isodate==0.7.2
 jaraco.classes==3.4.0
 jaraco.context==6.0.1
 jaraco.functools==4.3.0
@@ -76,12 +85,16 @@ Jinja2==3.1.6
 jiter==0.11.1
 jmespath==1.0.1
 joblib==1.5.2
+jsonref==1.1.0
 jsonschema==4.25.1
+jsonschema-path==0.3.4
 jsonschema-specifications==2025.9.1
 jupyter_client==8.6.3
 jupyter_core==5.9.1
+jupyterlab_widgets==3.0.16
 keras==3.12.0
 keyring==25.6.0
+lazy-object-proxy==1.12.0
 libclang==18.1.1
 llama_cpp_python==0.3.16
 lomond==0.3.3
@@ -91,6 +104,7 @@ MarkupSafe==3.0.3
 matplotlib-inline==0.2.1
 mcp==1.10.1
 mcp-cli==0.9.8
+mcpadapt==0.1.20
 mdurl==0.1.2
 mistralai==1.9.11
 ml_dtypes==0.5.3
@@ -106,13 +120,19 @@ npx==0.1.6
 numpy==2.3.4
 ollama==0.6.0
 openai==2.7.1
+openapi-core==0.19.5
+openapi-pydantic==0.5.1
+openapi-schema-validator==0.6.3
+openapi-spec-validator==0.7.2
 opt_einsum==3.4.0
 optional-django==0.1.0
 optree==0.17.0
 orjson==3.11.4
 packaging==25.0
 pandas==2.2.3
+parse==1.20.2
 parso==0.8.5
+pathable==0.4.4
 pexpect==4.9.0
 pillow==11.3.0
 platformdirs==4.5.0
@@ -133,6 +153,7 @@ pydub==0.25.1
 pyee==13.0.0
 Pygments==2.19.2
 PyJWT==2.10.1
+pyperclip==1.11.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 python-multipart==0.0.20
@@ -140,10 +161,12 @@ pytz==2025.2
 PyYAML==6.0.3
 pyzmq==27.1.0
 redis==7.0.1
-referencing==0.37.0
+referencing==0.36.2
 regex==2025.11.3
 requests==2.32.5
+rfc3339-validator==0.1.4
 rich==14.2.0
+rich-rst==1.3.2
 rpds-py==0.28.0
 rsa==4.9.1
 ruff==0.14.4
@@ -153,6 +176,7 @@ semantic-version==2.10.0
 setuptools==80.9.0
 shellingham==1.5.4
 six==1.17.0
+smolagents==1.22.0
 sniffio==1.3.1
 sse-starlette==3.0.3
 stack-data==0.6.3
@@ -183,7 +207,8 @@ uuid==1.30
 uvicorn==0.38.0
 wcwidth==0.2.14
 websockets==15.0.1
-Werkzeug==3.1.3
+Werkzeug==3.1.1
 wheel==0.45.1
+widgetsnbextension==4.0.15
 wrapt==2.0.1
 yarl==1.22.0
